# video-gaze-shifts

./: .flake8  .gitignore  .isort.cfg  .mypy.ini  .yarnrc.yml  LICENSE  README.md  lefthook.yml  package.json  pyproject.toml  requirements.txt
examples/: notebook.ipynb  output_1.json  output_2.json  output_3.json
video_gaze_shifts/: blink_detector.py  face_detector.py  gaze_estimator.py  runner.py  shift_estimator.py  utils.py  visualizer.py
video_gaze_shifts/blink_extraction_tf/: blink_extraction.py
